added in projectile

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -157,7 +157,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=170.000
@@ -1491,7 +1491,7 @@ PawnNoiseEmitterComponent.Variable=True
 PawnNoiseEmitterComponent.Cooking=True
 ProgressBar.Layout=True
 ProgressBar.Style=True
-ProgressBar.Progress=True
+ProgressBar.Progress=False
 ProgressBar.Accessibility=True
 ProgressBar.Appearance=True
 ProgressBar.Behavior=True
@@ -1512,28 +1512,68 @@ Ring_Powerup_C.Rendering=True
 Ring_Powerup_C.Actor=True
 Ring_Powerup_C.Collision=True
 Ring_Powerup_C.Input=True
+BP_Bullet_C.Tick=True
+BP_Bullet_C.Replication=True
+BP_Bullet_C.Rendering=True
+BP_Bullet_C.Actor=True
+BP_Bullet_C.Collision=True
+BP_Bullet_C.Input=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.ComponentTick=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+ArrowComponent.Variable=True
+ArrowComponent.TransformCommon=True
+ArrowComponent.Sockets=True
+ArrowComponent.ArrowComponent=True
+ArrowComponent.Rendering=True
+ArrowComponent.ComponentTick=True
+ArrowComponent.Navigation=True
+ArrowComponent.Tags=True
+ArrowComponent.ComponentReplication=True
+ArrowComponent.Cooking=True
+ArrowComponent.Events=True
+Cookie_Pickup_C.Tick=True
+Cookie_Pickup_C.Replication=True
+Cookie_Pickup_C.Rendering=True
+Cookie_Pickup_C.Actor=True
+Cookie_Pickup_C.Collision=True
+Cookie_Pickup_C.Input=True
+K2Node_Timeline.GraphNodeDetail=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/FuelPickup
-MRUItem1=/Game/2DSideScrollerBP/BluePrint/FuelPickup
-MRUItem2=/Game/2DSideScrollerBP/BluePrint/AbsolutelyDELICIOUSCookie
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/BP_Bullet
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/Cookie_Pickup
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/FuelPickup
 MRUItem3=/Game/2DSideScrollerBP/BluePrint/Ring_Powerup
-MRUItem4=/Game/Blueprints/Absolutely_DELICIOUS_Cookie_Sprite_0
-MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem6=/Game/2DSideScrollerBP/BluePrint/HUD
-MRUItem7=/Game/2DSideScrollerBP/BluePrint/Health
-MRUItem8=/Game/2DSideScrollerBP/Animations/PC_Shoot
-MRUItem9=/Game/2DSideScrollerBP/Animations/PC_Run
-MRUItem10=/Game/2DSideScrollerBP/Animations/PC_Projectile
-MRUItem11=/Game/2DSideScrollerBP/Animations/PC_Idle
-MRUItem12=/Game/2DSideScrollerBP/Animations/PC_Jump
-MRUItem13=/Game/2DSideScrollerBP/Animations/PC_JumpShoot
-MRUItem14=/Game/2DSideScrollerBP/Animations/Duck
-MRUItem15=/Game/2DSideScrollerBP/Animations/Lock
-MRUItem16=/Game/2DSideScrollerBP/Animations/PC_Hurt
-MRUItem17=/Game/2DSideScrollerBP/Animations/Enemy_Character
-MRUItem18=/Game/2DSideScrollerBP/Sprites/Lock
-MRUItem19=/Game/2DSideScrollerBP/Sprites/Lock_Walk
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem5=/Game/2DSideScrollerBP/BluePrint/HUD
+MRUItem6=/Game/2DSideScrollerBP/BluePrint/Health
+MRUItem7=/Game/2DSideScrollerBP/Animations/PC_Shoot
+MRUItem8=/Game/Data/AnimationState
+MRUItem9=/Game/2DSideScrollerBP/Sprites/House_Sprite
+MRUItem10=/Game/2DSideScrollerBP/Sprites/House
+MRUItem11=/Game/2DSideScrollerBP/Maps/House
+MRUItem12=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem13=/Game/2DSideScrollerBP/Maps/SSGame
+MRUItem14=/Game/2DSideScrollerBP/BluePrint/FuelPickup
+MRUItem15=/Game/2DSideScrollerBP/BluePrint/AbsolutelyDELICIOUSCookie
+MRUItem16=/Game/Blueprints/Absolutely_DELICIOUS_Cookie_Sprite_0
+MRUItem17=/Game/2DSideScrollerBP/Animations/PC_Run
+MRUItem18=/Game/2DSideScrollerBP/Animations/PC_Projectile
+MRUItem19=/Game/2DSideScrollerBP/Animations/PC_Idle
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1580,6 +1620,12 @@ MRUItem19=/Game/2DSideScrollerBP/Sprites/Lock_Walk
 /Game/2DSideScrollerBP/Sprites/Lock.Lock=1
 /Game/2DSideScrollerBP/Animations/Enemy_Character.Enemy_Character=1
 /Game/2DSideScrollerBP/Animations/Lock.Lock=1
+/Game/2DSideScrollerBP/Maps/House.House=1
+/Game/2DSideScrollerBP/Sprites/House_Sprite.House_Sprite=1
+/Game/2DSideScrollerBP/Blueprints/BP_Bullet.BP_Bullet=1
+/Game/2DSideScrollerBP/BluePrint/Health.Health=1
+/Game/2DSideScrollerBP/BluePrint/Ring_Powerup.Ring_Powerup=1
+/Game/2DSideScrollerBP/Blueprints/Cookie_Pickup.Cookie_Pickup=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1655,14 +1701,14 @@ Overlay="\"Object.Layout.Slot\" "
 CanvasPanel="\"Object.Layout.Slot\" "
 W_PickupItem_C=
 UserWidget=
-2DSideScrollerCharacter_C=
-PaperCharacter=
-Character=
-Pawn=
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+2DSideScrollerCharacter_C="\"Object.Shoot\" "
+PaperCharacter="\"Object.Shoot\" "
+Character="\"Object.Shoot\" "
+Pawn="\"Object.Shoot\" "
+StaticMeshComponent=
 MeshComponent=
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Layout.Slot\" "
-Animation State Machine="\"Struct.IsMovingLocal\" "
+Animation State Machine=
 Animation State Machine_5="\"Struct.IsMovingLocal\" "
 
 [PluginBrowser]
@@ -1679,7 +1725,7 @@ PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableSet.Def
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 CapsuleComponent=
-Animation State Machine=
+Animation State Machine=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 Animation State Machine_5=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 
 [SuppressableDialogs]
