Fixed health bar and added HUD

--- a/GameDesign2/Saved/Config/Windows/Engine.ini
+++ b/GameDesign2/Saved/Config/Windows/Engine.ini
@@ -23,6 +23,10 @@ Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
 Paths=../../../Engine/Plugins/Developer/AnimationSharing/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
+Paths=../../../Engine/Plugins/Runtime/OpenXR/Content
+Paths=../../../Engine/Plugins/Runtime/OpenXREyeTracker/Content
+Paths=../../../Engine/Plugins/Runtime/OpenXRHandTracking/Content
+Paths=../../../Engine/Plugins/VirtualProduction/Takes/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
@@ -52,12 +56,4 @@ MLSDKPath=(Path="")
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=True
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
 
