Added speed boost and house

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,7 +146,6 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/BluePrint
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -159,11 +158,11 @@ ContentBrowserTab1.PluginFilters=
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=9.333
-WindowSize=X=1273.333 Y=656.000
+ScreenPosition=X=0.000 Y=8.667
+WindowSize=X=1273.333 Y=665.333
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1617,28 +1616,51 @@ PaperTileMapComponent.VirtualTexture=True
 PaperTileMapComponent.Tags=True
 PaperTileMapComponent.Activation=True
 PaperTileMapComponent.Cooking=True
+Speed_Boost_C.Tick=True
+Speed_Boost_C.Replication=True
+Speed_Boost_C.Rendering=True
+Speed_Boost_C.Actor=True
+Speed_Boost_C.Collision=True
+Speed_Boost_C.Input=True
+RotatingMovementComponent.Variable=True
+RotatingMovementComponent.Sockets=True
+RotatingMovementComponent.RotatingComponent=True
+RotatingMovementComponent.PlanarMovement=True
+RotatingMovementComponent.MovementComponent=True
+RotatingMovementComponent.ComponentTick=True
+RotatingMovementComponent.Tags=True
+RotatingMovementComponent.ComponentReplication=True
+RotatingMovementComponent.Activation=True
+RotatingMovementComponent.Cooking=True
+RotatingMovementComponent.Events=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Events=True
+Speed_Boost_C.TransformCommon=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem1=/Game/2DSideScrollerBP/BluePrint/Ring_Powerup
-MRUItem2=/Game/2DSideScrollerBP/BluePrint/Health
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/_4_Rodriguez_Tileset__1_
-MRUItem4=/Game/2DSideScrollerBP/BluePrint/HUD
-MRUItem5=/Game/2DSideScrollerBP/Blueprints/BP_Bullet
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/FuelPickup
-MRUItem7=/Game/2DSideScrollerBP/Blueprints/Cookie_Pickup
-MRUItem8=/Game/2DSideScrollerBP/Animations/PC_Shoot
-MRUItem9=/Game/Data/AnimationState
-MRUItem10=/Game/2DSideScrollerBP/Sprites/House_Sprite
-MRUItem11=/Game/2DSideScrollerBP/Sprites/House
-MRUItem12=/Game/2DSideScrollerBP/Maps/House
-MRUItem13=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem14=/Game/2DSideScrollerBP/Maps/SSGame
-MRUItem15=/Game/2DSideScrollerBP/BluePrint/FuelPickup
-MRUItem16=/Game/2DSideScrollerBP/BluePrint/AbsolutelyDELICIOUSCookie
-MRUItem17=/Game/Blueprints/Absolutely_DELICIOUS_Cookie_Sprite_0
-MRUItem18=/Game/2DSideScrollerBP/Animations/PC_Run
-MRUItem19=/Game/2DSideScrollerBP/Animations/PC_Projectile
+MRUItem0=/Game/2DSideScrollerBP/Sprites/House_Mat
+MRUItem1=/Game/2DSideScrollerBP/Sprites/House
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/BP_Bullet
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/FuelPickup
+MRUItem4=/Game/2DSideScrollerBP/BluePrint/Speed_Boost
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem6=/Game/2DSideScrollerBP/BluePrint/Ring_Powerup
+MRUItem7=/Game/2DSideScrollerBP/BluePrint/Health
+MRUItem8=/Game/2DSideScrollerBP/Animations/Lock
+MRUItem9=/Game/2DSideScrollerBP/Animations/PC_Hurt
+MRUItem10=/Game/2DSideScrollerBP/Blueprints/_4_Rodriguez_Tileset__1_
+MRUItem11=/Game/2DSideScrollerBP/BluePrint/HUD
+MRUItem12=/Game/2DSideScrollerBP/Blueprints/Cookie_Pickup
+MRUItem13=/Game/2DSideScrollerBP/Animations/PC_Shoot
+MRUItem14=/Game/Data/AnimationState
+MRUItem15=/Game/2DSideScrollerBP/Sprites/House_Sprite
+MRUItem16=/Game/2DSideScrollerBP/Maps/House
+MRUItem17=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem18=/Game/2DSideScrollerBP/Maps/SSGame
+MRUItem19=/Game/2DSideScrollerBP/BluePrint/FuelPickup
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1692,6 +1714,7 @@ MRUItem19=/Game/2DSideScrollerBP/Animations/PC_Projectile
 /Game/2DSideScrollerBP/BluePrint/Ring_Powerup.Ring_Powerup=1
 /Game/2DSideScrollerBP/Blueprints/Cookie_Pickup.Cookie_Pickup=1
 /Game/2DSideScrollerBP/Blueprints/_4_Rodriguez_Tileset__1_._4_Rodriguez_Tileset__1_=1
+/Game/2DSideScrollerBP/BluePrint/Speed_Boost.Speed_Boost=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1734,6 +1757,9 @@ MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 MRUItem1=/Game/2DSideScrollerBP/Maps/SSGame
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/House1.House1;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/House.House;
+RecentlyPlaced=/Game/2DSideScrollerBP/BluePrint/Speed_Boost.Speed_Boost;
 RecentlyPlaced=/Game/2DSideScrollerBP/BluePrint/AbsolutelyDELICIOUSCookie.AbsolutelyDELICIOUSCookie;
 RecentlyPlaced=/Game/2DSideScrollerBP/BluePrint/FuelPickup.FuelPickup;
 RecentlyPlaced=/Game/2DSideScrollerBP/Animations/AbsolutelyDELICIOUSCookie.AbsolutelyDELICIOUSCookie;
@@ -1752,7 +1778,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0].Vertices.Vertices[18]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0].Vertices.Vertices[4]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
 SphereComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent=
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SceneComponent=
 ActorComponent=
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.ImageSize\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors.Minimum\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors.Maximum\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -1771,17 +1797,21 @@ UserWidget=
 PaperCharacter=
 Character=
 Pawn=
-StaticMeshComponent=
-MeshComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Layout.Slot\" "
 Animation State Machine=
 Animation State Machine_5="\"Struct.IsMovingLocal\" "
+CharacterMovementComponent=
+PawnMovementComponent=
+NavMovementComponent=
+MovementComponent=
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=PIE
 
 [DetailCustomWidgetExpansion]
 K2Node_FunctionEntry=
@@ -1793,6 +1823,8 @@ K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableSet.
 CapsuleComponent=
 Animation State Machine=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 Animation State Machine_5=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+CharacterMovementComponent=
+Character=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -1890,6 +1922,7 @@ Pawn=
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
