--- a/GameDesign2/Config/DefaultGame.ini
+++ b/GameDesign2/Config/DefaultGame.ini
@@ -1,7 +1,12 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FAA00EB44E34A0940F5C60AF39E5AE46
-ProjectName=2D Side Scroller Game Blueprint Template
+ProjectName=Santa journey
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
+
